src/objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>ICB_Purchase_Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Used to indicate how the operator spends with Unilever products.</description>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields> 
    <fields>
        <fullName>ICB_Manufacture_Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Used to indicate the price of products which operator pays to Unilever to distribute the products to salesman.</description>
        <label>Manufacture Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>    
    
    <fields>
        <fullName>FS_Amount_of_box_per_pallet__c</fullName>
        <description>Purpose: Amount of box per pallet from product</description>
        <formula>Product2.FS_Amount_of_box_per_pallet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount of box per pallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_Bracket_1__c</fullName>
        <label>Bracket 1</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FS_Bracket_2__c</fullName>
        <label>Bracket 2</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FS_Bracket_3__c</fullName>
        <label>Bracket 3</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FS_Comment__c</fullName>
        <description>This will be used as comment field for update in Price list</description>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FS_End_Date__c</fullName>
        <description>Pricing End Date coming from SAP</description>
        <inlineHelpText>Pricing End Date coming from SAP</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FS_List_Price_including_VAT__c</fullName>
        <formula>UnitPrice  * (1  +  FS_VAT__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price including VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FS_Price_per_piece_with_VAT__c</fullName>
        <formula>FS_List_Price_including_VAT__c / Product2.FS_ZSU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price per piece with VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FS_Price_per_piece_without_VAT__c</fullName>
        <formula>UnitPrice  /  Product2.FS_ZSU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price per piece without VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FS_ProfitabilityTargetCanada__c</fullName>
        <description>Purpose : To get Market Target (Opp Product) by considering MarketType and Country (Canada)
Data Source : NA | Integration : NA | Security Level : Restricted</description>
        <formula>CASE(Product2.MarketType__c,
&quot;6I DRESSINGS-CONDIMENTS-DIPS&quot;,26.5, 
&quot;6K SAUCES-GRAVIES&quot;,38.5, 
&quot;93 MAYONNAISE&quot;,33.8, 
&quot;FOH MAYO&quot;,30.0, 
&quot;BOH MAYO&quot;,23.8, 
&quot;D1 SOUPS&quot;,33.0, 
&quot;SDJ&quot;,25.8, 
&quot;E1 BASES-BOUILLIONS&quot;,24.1,
&quot;Knorr Ultimate Low/Reduced Sodium&quot;,23.0,
&quot;LCB&quot;,33.9, 
&quot;F1 SPREADS AND TOPPING&quot;,20.0, 
&quot;G1 TEA-BEVERAGES&quot;,30.0, 
&quot;SPECIALTY TEA&quot;,40.5, 
&quot;HOT TEA&quot;,25.0, 
&quot;ICED TEA&quot;,30.0, 
&quot;H1 FLAVOUR DELIVERY SYS-SEASONING&quot;,66.8, 
&quot;K1 MEALS&quot;,35.0, 
&quot;8Z RETAIL&quot;,45.0,
&quot;Q1 MISCELLANEOUS&quot;,59.5, 
0) / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profitability Target Canada</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FS_ProfitabilityTargetUSA__c</fullName>
        <description>Purpose : To get Market Target (Opp Product) by considering MarketType and Country (USA)
Data Source : NA | Integration : NA | Security Level : Restricted</description>
        <formula>CASE(Product2.MarketType__c, 
&quot;6I DRESSINGS-CONDIMENTS-DIPS&quot;,26.5, 
&quot;6K SAUCES-GRAVIES&quot;,38.5, 
&quot;93 MAYONNAISE&quot;,33.8, 
&quot;FOH MAYO&quot;,32.0, 
&quot;BOH MAYO&quot;,25.1, 
&quot;D1 SOUPS&quot;,33.0, 
&quot;SDJ&quot;,22.0, 
&quot;E1 BASES-BOUILLIONS&quot;,29.5, 
&quot;Knorr Ultimate Low/Reduced Sodium&quot;,23.0,
&quot;LCB&quot;,22.0,
&quot;F1 SPREADS AND TOPPING&quot;,20.0, 
&quot;G1 TEA-BEVERAGES&quot;,30.0, 
&quot;SPECIALTY TEA&quot;,23.9, 
&quot;HOT TEA&quot;,22.9, 
&quot;ICED TEA&quot;,34.3, 
&quot;H1 FLAVOUR DELIVERY SYS-SEASONING&quot;,66.8, 
&quot;K1 MEALS&quot;,35.0, 
&quot;8Z RETAIL&quot;,45.0, 
&quot;Q1 MISCELLANEOUS&quot;,59.5, 
0) / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profitability Target USA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FS_Start_Date__c</fullName>
        <description>Price start date coming from SAP</description>
        <inlineHelpText>Price start date coming from SAP</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FS_Unit_conversion_factor__c</fullName>
        <description>Purpose : Unit conversion factor from Sales Unit to Base UOM from Product</description>
        <formula>Product2.FS_ZSU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit conversion factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_VAT__c</fullName>
        <formula>CASE( CurrencyIsoCode,
 &apos;RUB&apos;,  
  CASE( Product2.FS_VATRU__c, 
        1,  $Setup.FSVATRU__c.FS_Value_1__c , 
        2,  $Setup.FSVATRU__c.FS_Value_2__c , 
        0) , 
 &apos;UAH&apos;,
  CASE( Product2.FS_VATUA__c, 
        2,  $Setup.FSVATUA__c.FS_Value_2__c , 
        0) , 
 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FS_Weight_Value__c</fullName>
        <description>Purpose: Corresponding NetWeight value from product</description>
        <formula>Product2.FS_NetWeight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weight Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_salesOrgCode__c</fullName>
        <description>Sales Organization Code taken from SAP.</description>
        <label>Sales Org Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_ID__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>SAP ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>